[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/grass.png" type="Texture" id=2]
[ext_resource path="res://scripts/Map.gd" type="Script" id=3]
[ext_resource path="res://interfaces/Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://sound/1_bass_session.ogg" type="AudioStream" id=6]
[ext_resource path="res://sound/2_simple_session.ogg" type="AudioStream" id=7]
[ext_resource path="res://sound/3_piano_session.ogg" type="AudioStream" id=8]
[ext_resource path="res://sound/4_banjo_session.ogg" type="AudioStream" id=9]
[ext_resource path="res://sprites/Tree1.png" type="Texture" id=10]
[ext_resource path="res://sound/wilin.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/8_drum_noises_session.ogg" type="AudioStream" id=12]
[ext_resource path="res://sound/5_bottle_session.ogg" type="AudioStream" id=13]
[ext_resource path="res://sound/7_screams_session.ogg" type="AudioStream" id=14]
[ext_resource path="res://sound/6_car_screech_session.ogg" type="AudioStream" id=15]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=1]
0/name = "grass.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "grass.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "grass.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "grass.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "grass.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "grass.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 160, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "grass.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 192, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "grass.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 224, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Tree1.png 8"
8/texture = ExtResource( 10 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 2 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 3 )

[node name="MusicLayer1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MusicLayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="MusicLayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="MusicLayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="MusicLayer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="MusicLayer6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="MusicLayer7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="MusicLayer8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 200 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="WilinSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 11 )
